--- a/index.html
+++ b/index.html
@@ -1,28 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- displays site properly based on user's device -->
+		
+		<link
+		rel="icon"
+		type="image/png"
+		sizes="32x32"
+		href="./images/favicon-32x32.png"
+		/>
+		<link rel="stylesheet" href="./css/style.css" />
+		<title>Frontend Mentor | Advice generator app</title>
+		<script src="https://unpkg.com/vue@3" defer></script>
+		<script src="./js/vue-script.js" defer></script>
+	</head>
+	<body>
+		<div class="container" id="app">
+			<div class="advice">
+				<div class="advice__id">Advice # {{ adviceId }}</div>
+				<!-- <div class="advice__id">Advice #<span></span></div> -->
+				<div class="advice__text">
+					"{{ adviceText }}"
+				</div>
+				<div class="advice__divider">
+					<img src="./images/pattern-divider-desktop.svg" alt="Divider Image" />
+				</div>
+				<button class="advice__generator" @click="fetchAdvice">
+					<img
+						src="./images/icon-dice.svg"
+						alt="Advice Generator Button Image"
+					/>
+				</button>
+			</div>
+		</div>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Advice generator app</title>
+		<div class="attribution">
+			Challenge by
+			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+				>Frontend Mentor</a
+			>. Coded by <a href="https://linkedin.com/in/osmannurierdogan">Osman Nuri Erdogan</a>.
+		</div>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Advice #<!-- Advice ID goes here -->
-
-  "<!-- Advice text goes here -->"
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+		<!-- <script src="./js/script.js" defer></script> -->
+	</body>
 </html>
